--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "netflix",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0"
-  }
+	"private": true,
+	"scripts": {
+		"dev": "yarn run open-browser && next dev -p 3000",
+		"open-browser": "start http://localhost:3000",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"next": "latest",
+		"react": "18.1.0",
+		"react-dom": "18.1.0"
+	},
+	"devDependencies": {
+		"@types/node": "17.0.35",
+		"@types/react": "18.0.9",
+		"@types/react-dom": "18.0.5",
+		"autoprefixer": "^10.4.7",
+		"postcss": "^8.4.14",
+		"tailwindcss": "^3.1.2",
+		"typescript": "4.7.2"
+	}
 }
