--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
 	},
 	"dependencies": {
 		"@heroicons/react": "v1",
+		"@tailwindcss/line-clamp": "^0.4.2",
 		"next": "latest",
 		"react": "18.1.0",
 		"react-dom": "18.1.0",
-		"react-icons": "^4.4.0"
+		"react-icons": "^4.4.0",
+		"tailwind-scrollbar": "^2.0.1",
+		"tailwind-scrollbar-hide": "^1.1.7",
+		"tailwindcss-textshadow": "^2.1.3"
 	},
 	"devDependencies": {
 		"@types/node": "17.0.35",
